--- a/src/component/header.css
+++ b/src/component/header.css
@@ -5,6 +5,11 @@
    justify-content: space-between;
 }
 
+.logo-img {
+    width: 75px;
+    height: auto;
+}
+
 .header ul {
     display: flex;
     align-items: center;
