--- a/src/component/header.css
+++ b/src/component/header.css
@@ -1,19 +1,23 @@
 .header {
-   display: flex;
-   padding: 15px 34px;
-   align-items: center;
-   justify-content: space-between;
+    display: flex;
+    padding: 15px 34px;
+    align-items: center;
+    justify-content: space-between;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .logo-img {
-    width: 75px;
+    width: 100px;
     height: auto;
 }
 
 .header ul {
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 40px;
+    font-size: 24px;
 }
 
 .nav-links ul li a.active {
