--- a/src/component/header.css
+++ b/src/component/header.css
@@ -3,8 +3,9 @@
     padding: 15px 34px;
     align-items: center;
     justify-content: space-between;
-    position: sticky;
+    position: static;
     top: 0;
+    width: 80%;
     z-index: 1;
 }
 
